[package]
name = "integration-test"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
tokio = "1.27.0"
tracing = "0.1.15"
tracing-subscriber = { version = "0.3.1", features = ["env-filter", "json"] }
tracing-appender = "0.2.2"
backtrace = "0.3.67"
backtrace-ext = "0.2"

[dev-dependencies]
tokio-bin-process = { path = "../tokio-bin-process" }
