[package]
name = "tokio-bin-process"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "run your application under a separate process with tokio tracing assertions when integration testing"
repository = "https://github.com/shotover/tokio-bin-process"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.15"
tracing-subscriber = { version = "0.3.1", features = ["env-filter", "json"] }
subprocess = "0.2.7"
anyhow = "1.0.42"
nix = "0.27.0"
tokio = { version = "1.25.0", features = ["full", "macros"] }
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0"
nu-ansi-term = "0.49.0"
itertools = "0.11.0"
once_cell = "1.17.1"
chrono = "0.4.24"
cargo_metadata = "0.17.0"
