[package]
name = "tokio-bin-process"
version = "0.5.1"
edition = "2021"
license = "Apache-2.0"
description = "run your application under a separate process with tokio tracing assertions when integration testing"
repository = "https://github.com/shotover/tokio-bin-process"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.15"
subprocess = "0.2.7"
anyhow = "1.0.42"
nix = { version = "0.29.0", features = ["signal"] }
tokio = { version = "1.25.0", features = ["sync", "signal", "rt", "process", "io-util"] }
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0"
nu-ansi-term = "0.50.0"
itertools = "0.13.0"
once_cell = "1.17.1"
chrono = "0.4.24"
cargo_metadata = "0.18.0"
regex-lite = "0.1.6"

[dev-dependencies]
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "time"] }
